; ModuleID = '/home/carl/AnghaBench/git/extr_tree-walk.c_free_extended_entry.c'
source_filename = "/home/carl/AnghaBench/git/extr_tree-walk.c_free_extended_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tree_desc_x = type { %struct.tree_desc_skip* }
%struct.tree_desc_skip = type { %struct.tree_desc_skip* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tree_desc_x*)* @free_extended_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_extended_entry(%struct.tree_desc_x* %0) #0 {
  %2 = alloca %struct.tree_desc_x*, align 8
  %3 = alloca %struct.tree_desc_skip*, align 8
  %4 = alloca %struct.tree_desc_skip*, align 8
  store %struct.tree_desc_x* %0, %struct.tree_desc_x** %2, align 8
  %5 = load %struct.tree_desc_x*, %struct.tree_desc_x** %2, align 8
  %6 = getelementptr inbounds %struct.tree_desc_x, %struct.tree_desc_x* %5, i32 0, i32 0
  %7 = load %struct.tree_desc_skip*, %struct.tree_desc_skip** %6, align 8
  store %struct.tree_desc_skip* %7, %struct.tree_desc_skip** %4, align 8
  br label %8

8:                                                ; preds = %17, %1
  %9 = load %struct.tree_desc_skip*, %struct.tree_desc_skip** %4, align 8
  %10 = icmp ne %struct.tree_desc_skip* %9, null
  br i1 %10, label %11, label %19

11:                                               ; preds = %8
  %12 = load %struct.tree_desc_skip*, %struct.tree_desc_skip** %4, align 8
  %13 = getelementptr inbounds %struct.tree_desc_skip, %struct.tree_desc_skip* %12, i32 0, i32 0
  %14 = load %struct.tree_desc_skip*, %struct.tree_desc_skip** %13, align 8
  store %struct.tree_desc_skip* %14, %struct.tree_desc_skip** %3, align 8
  %15 = load %struct.tree_desc_skip*, %struct.tree_desc_skip** %4, align 8
  %16 = call i32 @free(%struct.tree_desc_skip* %15)
  br label %17

17:                                               ; preds = %11
  %18 = load %struct.tree_desc_skip*, %struct.tree_desc_skip** %3, align 8
  store %struct.tree_desc_skip* %18, %struct.tree_desc_skip** %4, align 8
  br label %8

19:                                               ; preds = %8
  ret void
}

declare dso_local i32 @free(%struct.tree_desc_skip*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
